crates/rymx/tests/errors/many_errors.rym
const test: union ["test"]u8 | [1.0]usihf = 0;
